Added physical count functionality, sound & vibration and replaced all javascript alerts with ionic versions

--- a/src/pages/bin-lookup/bin-lookup.html
+++ b/src/pages/bin-lookup/bin-lookup.html
@@ -50,5 +50,5 @@
             </ion-item>
         </ion-list>
     </ion-scroll>
-    <barcode-listener (scan)='onBarcodeScan($event)'></barcode-listener>
+    <barcode-listener (scan)='loadItemByBarcode($event)'></barcode-listener>
 </ion-content>
