--- a/src/pages/pick-shipments-pick/tabs/unpicked-list.html
+++ b/src/pages/pick-shipments-pick/tabs/unpicked-list.html
@@ -15,22 +15,26 @@
 
 <ion-content padding>
     <ion-grid>
-        <div class="row header">
-            <ion-col col-5>Location/Item</ion-col>
-            <ion-col col-5>LotSerial</ion-col>
-            <ion-col col-2>Qty</ion-col>
-        </div>
-        <ion-item tappable no-margin no-padding *ngFor="let loc of pickProvider.pickList; let i = index"
-                  (click)="openPickItem(item);">
-            <strong>{{loc.LocationID?.value}}</strong>
-            <div no-margin no-padding>
-                <ion-row *ngFor="let item of loc.Items">
-                    <ion-col col-5>{{item.InventoryID?.value}}</ion-col>
-                    <ion-col col-5>{{item.LotSerialNbr?.value}}</ion-col>
-                    <ion-col col-2>{{pickProvider.getPendingAllocationQty(item.LineNbr.value, item.SplitLineNbr.value)}}/{{item.RemainingQty}}
-                    </ion-col>
+        <ion-row class="table-header">
+            <ion-col col-7>Location/Item</ion-col>
+            <ion-col col-5 text-right>Qty</ion-col>
+        </ion-row>
+        <ion-list class="item-list">
+            <ion-item no-margin no-padding class="list-group" *ngFor="let loc of pickProvider.pickList; let i = index" (click)="openPickItem(item);">
+                <ion-row>
+                    <ion-col col-7><strong>{{loc.LocationID?.value}}</strong></ion-col>
+                    <ion-col col-5></ion-col>
                 </ion-row>
-            </div>
-        </ion-item>
+                <ion-list class="list">
+                    <ion-item no-margin no-padding class="list-item" tappable *ngFor="let item of loc.Items">
+                        <ion-row  no-margin no-padding>
+                            <ion-col col-7>{{item.InventoryID?.value}}</ion-col>
+                            <ion-col col-5 class="column-right">{{item.RemainingQty}}
+                            </ion-col>
+                        </ion-row>
+                    </ion-item>
+                </ion-list>
+            </ion-item>
+        </ion-list>
     </ion-grid>
 </ion-content>
