--- a/src/pages/receive/shipment/tabs/pending.html
+++ b/src/pages/receive/shipment/tabs/pending.html
@@ -18,9 +18,9 @@
 
 <ion-content padding>
     <ion-grid>
-        <ion-row style="border-bottom: 1px solid #888;">
-            <ion-col col-8><strong>Locations / Item</strong></ion-col>
-            <ion-col col-2 text-right style="padding-right: 15px;"><strong>Qty</strong></ion-col>
+        <ion-row class="table-header">
+            <ion-col col-8>Locations / Item</ion-col>
+            <ion-col col-2 text-right>Qty</ion-col>
         </ion-row>
         <ion-list no-margin no-padding>
             <ion-item no-margin no-padding *ngFor="let key of objectKeys(receiveProvider.pendingItems)">
