--- a/src/pages/setup/setup.html
+++ b/src/pages/setup/setup.html
@@ -13,13 +13,25 @@
 </ion-header>
 
 
-<ion-content padding>
-    <h1>Initial Setup</h1>
+<ion-content padding text-center>
+    <h2>Welcome to AcuStock</h2>
+    <p>To get started you must install the AcuShip customisation in Acumatica.
+        Once completed you can configure your devices manually or using QR code.
+        <!--
+            To generate QR codes you can use the utility here or consult the user guide.
+        -->
+    </p>
+    <strong>Set connection preferences or scan a configuration barcode</strong>
+    <br/><br/>
     <button ion-button (click)="showPreferences()">
         Go To Settings
     </button>
+    <button ion-button (click)="testConnection()">
+        Test Connection
+    </button>
     <button ion-button (click)="scanBarcode()">
-        Scan Config Barcode
+        <ion-icon name="barcode"></ion-icon>
+        Scan with Camera
     </button>
     <!--<barcode-listener (scan)='onBarcodeScan($event)'></barcode-listener>-->
 </ion-content>
